--- a/index.html
+++ b/index.html
@@ -1,111 +1,221 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
+
+
 <head>
+
   <meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Sp Siam Ahmed Photo gallery</title>
+
   <link rel="stylesheet" href="./style.css">
+
 </head>
 
+
+
 <body>
+
   <section>
+
     <div class="container">
+
       <div class="header">
+
         <h1 class="logo">Siam Photo Gallery </h1>
+
         <form>
+
           <input type="text" placeholder="Search">
+
           <ion-icon name="search-outline"></ion-icon>
+
         </form>
+
       </div>
+
       <div class="gallery">
+
         <div class="item">
+
           <a href="#">
-            <img src="./images/1.jpg" alt="image">
+
+            <img src="1.jpg" alt="image">
+
             <h3>Katiadi College </h3>
+
           </a>
+
         </div>
+
         <div class="item">
+
           <a href="#">
-            <img src="./images/2.jpg" alt="image">
+
+            <img src="2.jpg" alt="image">
+
             <h3>Vasai,Maharashtra</h3>
+
           </a>
+
         </div>
+
         <div class="item">
+
           <a href="#">
-            <img src="./images/3.jpg" alt="image">
+
+            <img src="3.jpg" alt="image">
+
             <h3>Vasai,Maharashtra</h3>
+
           </a>
+
         </div>
+
         <div class="item">
+
           <a href="#">
-            <img src="./images/4.jpg" alt="image">
+
+            <img src="4.jpg" alt="image">
+
             <h3>New Mumbai,Maharashtra</h3>
+
           </a>
+
         </div>
+
         <div class="item">
+
           <a href="#">
-            <img src="./images/5.jpg" alt="image">
+
+            <img src="5.jpg" alt="image">
+
             <h3>Thrissur,Kerala</h3>
+
           </a>
+
         </div>
+
         <div class="item">
+
           <a href="#">
-            <img src="./images/6.jpg" alt="image">
+
+            <img src="6.jpg" alt="image">
+
             <h3>Thrissur,Kerala</h3>
+
           </a>
+
         </div>
+
            <div class="item">
+
              <a href="#">
-               <img src="./images/7.jpg" alt="image">
+
+               <img src=".7.jpg" alt="image">
+
                <h3>Thrissur,Kerala</h3>
+
              </a>
+
            </div>
+
               <div class="item">
+
                 <a href="#">
-                  <img src="./images/8.jpg" alt="image">
+
+                  <img src="6.jpg" alt="image">
+
                   <h3>Thrissur,Kerala</h3>
+
                 </a>
+
               </div>
+
                  <div class="item">
+
                    <a href="#">
+
                      <img src="./images/9.jpg" alt="image">
+
                      <h3>Thrissur,Kerala</h3>
+
                    </a>
+
                  </div>
+
                     <div class="item">
+
                       <a href="#">
+
                         <img src="./images/10.jpg" alt="image">
+
                         <h3>Thrissur,Kerala</h3>
+
                       </a>
+
                     </div>
+
                        <div class="item">
+
                          <a href="#">
+
                            <img src="./images/11.jpg" alt="image">
+
                            <h3>Thrissur,Kerala</h3>
+
                          </a>
+
                        </div>
+
                           <div class="item">
+
                             <a href="#">
+
                               <img src="./images/12.jpg" alt="image">
+
                               <h3>Thrissur,Kerala</h3>
+
                             </a>
+
                           </div>
+
                              <div class="item">
+
                                <a href="#">
+
                                  <img src="./images/13.jpg" alt="image">
+
                                  <h3>Thrissur,Kerala</h3>
+
                                </a>
+
                              </div>
+
                                 <div class="item">
+
                                   <a href="#">
+
                                     <img src="./images/14.jpg" alt="image">
+
                                     <h3>Thrissur,Kerala</h3>
+
                                   </a>
+
                                 </div>
+
       </div>
+
     </div>
+
   </section>
+
 </body>
+
+
 
 </html>
