--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                    <a href="#">
 
-                     <img src="./images/9.jpg" alt="image">
+                     <img src="8.jpg" alt="image">
 
                      <h3>Thrissur,Kerala</h3>
 
